src/css/base.css
:root {
  --font-family: 'Lora', sans-serif;
  --second-family: 'Cinzel', sans-serif;
  --third-family: 'SF Pro Text', -apple-system, BlinkMacSystemFont, 'Segoe UI',
    Roboto, sans-serif;

  font-family: var(--font-family);
  font-size: 12px;
  font-weight: 400;
  color: #fffffd;
  background-color: #182223;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

body {
  display: flex;
  flex-direction: column;
  min-width: 100vw;
  min-height: 100vh;
  margin: 47px 0 0 0;
}

html {
  scroll-behavior: smooth;
}

main {
  flex-grow: 1;
}

.section {
  margin-bottom: 40px;
}

.container {
  width: 320px;
  margin: 0 auto;
  padding: 0 20px;
}

/* Styles for Desktop devices */
@media only screen and (min-width: 1200px) {
  body {
    margin: 78px 0 0 0;
  }
  .container {
    width: 1200px;
    padding: 0 20px;
  }

  .section {
    margin-bottom: 80px;
  }
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0, 0, 0, 0);
  overflow: hidden;
}

